Added project folder separately

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                     manage enrollments, and view schedules.
                 </p>
                 <p><strong>Tech:</strong>C-language, Using Files</p>
+                <a href="projects/course-registration.html">View Case Study</a><br>
                 <a href="https://github.com/shahilmansuri-AI-ML/IntelliStudent" target="_blank">GitHub</a>
             </div>
 
@@ -101,6 +102,7 @@
                     optimization features.
                 </p>
                 <p><strong>Tech:</strong> Python, Pandas, Scikit-learn, Flask</p>
+                <a href="projects/spam-classifier.html">View Case Study</a><br>
                 <a href="https://github.com/shahilmansuri-AI-ML/SmartGrid_Energy_Optimizer" target="_blank">GitHub</a>
             </div>
 
