--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
+        <a href="#aiml">AI/ML</a>
+        <a href="blog/index.html">Blog</a>
         <a href="#contact">Contact</a>
         <button id="themeToggle" class="theme-btn">Dark Mode</button>
     </nav>
+
 
     <!-- ===== ABOUT ===== -->
     <section id="about" class="section">
