LinkedIn link was changed

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <p class="contact-info">
             Or connect with me on
             <a href="https://github.com/shahilmansuri-AI-ML" target="_blank">GitHub</a> |
-            <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+            <a href="https://linkedin.com/in/shahil-mansuri-a32050241" target="_blank">LinkedIn</a>
         </p>
     </section>
 
